[tool.poetry]
name = "iceoryx2 book"
version = "0.0.1"
description = "the iceoryx2 book"
authors = ["ekxide developers <info@ekxide.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.3"
sphinx-multiversion = "^0.2.4"
myst-parser = "^4.0.0"
breathe = "^4.35.0"
exhale = "^0.3.7"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-tippy = "^0.4.3"
sphinx-design = "^0.6.1"
furo = "^2025.7.19"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
